tests/ui/keyword/keyword-self-as-identifier.rs
fn main() {
    let Self = 22; //~ ERROR cannot find unit struct, unit variant or constant `Self` in this scope
}
